--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,10 +13,12 @@
 
   <!-- include source files here... -->
   <script src="src/account.js"></script>
+  <script src="src/statement.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/accountSpec.js"></script>
+  <script src="spec/statementSpec.js"></script>
 
 </head>
 
