added bank account and record

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,12 +14,12 @@
   <!-- include source files here... -->
   <script src="src/account.js"></script>
   <script src="src/statement.js"></script>
-
+  <script src="src/record.js"></script>
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/accountSpec.js"></script>
   <script src="spec/statementSpec.js"></script>
-
+  <script src="spec/recordSpec.js"></script>
 </head>
 
 <body>
