added format class

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,13 +15,13 @@
   <script src="src/account.js"></script>
   <script src="src/statement.js"></script>
   <script src="src/record.js"></script>
-
+  <script src="src/format.js"></script>
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/accountSpec.js"></script>
   <script src="spec/statementSpec.js"></script>
   <script src="spec/recordSpec.js"></script>
-
+  <script src="spec/formatSpec.js"></script>
 </head>
 
 <body>
