--- a/Bank.html
+++ b/Bank.html
@@ -11,5 +11,6 @@
 
 </body>
 <script src="src/account.js"></script>
-<script src="src/statement.js"></script>
+<script src="src/record.js"></script>
+<script src="src/format.js"></script>
 </html>
