refactored dependency injection an renamed some methods

--- a/Bank.html
+++ b/Bank.html
@@ -13,4 +13,5 @@
 <script src="src/account.js"></script>
 <script src="src/record.js"></script>
 <script src="src/format.js"></script>
+<script src="src/config.js"></script>
 </html>
