--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,11 +15,13 @@
   <script src="src/account.js"></script>
   <script src="src/record.js"></script>
   <script src="src/format.js"></script>
+  <script src="src/config.js"></script>
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
   <script src="spec/accountSpec.js"></script>
   <script src="spec/recordSpec.js"></script>
   <script src="spec/formatSpec.js"></script>
+  <script src="spec/configSpec.js"></script>
 </head>
 
 <body>
