renamed record class

--- a/Bank.html
+++ b/Bank.html
@@ -10,8 +10,8 @@
 
 
 </body>
-<script src="src/account.js"></script>
-<script src="src/record.js"></script>
+<script src="src/bankAccount.js"></script>
+<script src="src/ledger.js"></script>
 <script src="src/format.js"></script>
 <script src="src/config.js"></script>
 </html>
