--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,14 +12,14 @@
   <script src="lib/jasmine-3.2.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/account.js"></script>
-  <script src="src/record.js"></script>
+  <script src="src/bankAccount.js"></script>
+  <script src="src/ledger.js"></script>
   <script src="src/format.js"></script>
   <script src="src/config.js"></script>
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
-  <script src="spec/accountSpec.js"></script>
-  <script src="spec/recordSpec.js"></script>
+  <script src="spec/bankAccountSpec.js"></script>
+  <script src="spec/ledgerSpec.js"></script>
   <script src="spec/formatSpec.js"></script>
   <script src="spec/configSpec.js"></script>
 </head>
